# docdoc

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
tests/data/: entry.md  section.md  subsection.md
tests/data/subfolder/: section.md
