[package]
name = "docdoc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { optional = true, version = "4.3.5", features = ["derive", "env"] }
regex = "1.8.4"

[features]
default = ["clap"]
clap = ["dep:clap"]
