[package]
name = "docdoc"
version = "0.0.1"
edition = "2021"
authors = ["Henk Oordt <hd@oordt.dev>"]
license = "MIT OR Apache-2.0"
keywords = ["doc", "markdown"]
categories = ["command-line-utilities", "template-engine"]
readme = "./README.md"
repository = "https://github.com/hdoordt/docdoc"
documentation = "https://docs.rs/docdoc"

[dependencies]
clap = { optional = true, version = "4.3.5", features = ["derive", "env"] }
regex = "1.8.4"

[features]
default = ["clap"]
clap = ["dep:clap"]
