[package]
name = "docdoc"
description = "Simple tool that stitches together a tree of text-based files"
version = "0.0.1"
edition = "2021"
authors = ["Henk Oordt <hd@oordt.dev>"]
license = "MIT OR Apache-2.0"
keywords = ["doc", "markdown"]
categories = ["command-line-utilities", "template-engine"]
readme = "./README.md"
repository = "https://github.com/hdoordt/docdoc"
documentation = "https://docs.rs/docdoc"
exclude = ["tests/data"]

[dependencies]
clap = { optional = true, version = "4.3.5", features = ["derive", "env"] }
notify = { version = "6.0.1", optional = true }
notify-debouncer-mini = { version = "0.3.0", optional = true }
regex = "1.8.4"

[features]
default = ["clap", "watch"]
clap = ["dep:clap"]
watch = ["dep:notify", "dep:notify-debouncer-mini"]
